syntax = "proto3";

package db_server;

option go_package = "github.com/arbha1erao/cohereDB/db_server";

service DBService {
  rpc Get (KeyRequest) returns (KeyResponse);
  rpc Set (KeyValueRequest) returns (SetResponse);
  rpc Delete (KeyRequest) returns (DeleteResponse);
}

message KeyRequest {
  string key = 1;
}

message KeyValueRequest {
  string key = 1;
  string value = 2;
}

message KeyResponse {
  string value = 1;
}

message SetResponse {
  string message = 1;
}

message DeleteResponse {
  string message = 1;
}
